# Exercism

./: .gitignore  CMakeLists.txt  Instrumentor.h  README.md  Timer.h  main.cpp
.github/workflows/: sonarcloud.yml
Src/: Acronym.h  Armstrong_Numbers.cpp  Armstrong_Numbers.h  CountBlocksOfOnes.h  Darts.h  Hamming.cpp  Hamming.h  Leap.h  PrimeNumbers.h  Queen_Attack.cpp  Queen_Attack.h  Raindrops.cpp  Raindrops.h  ReverseString.h  RomanNumerals.cpp  RomanNumerals.h  SFINAE.h  Scrabble_score.h  Triangles.cpp  Triangles.h  VisualPatterns.cpp  VisualPatterns.h  allergies.h  atbash_cipher.h  binary.cpp  binary.h  binary_search.cpp  binary_search.h  circular_buffer.h  collatz_conjecture.cpp  collatz_conjecture.h  difference_of_squares.cpp  difference_of_squares.h  dijkstra_algorithm.h  doctor_data.h  grade_school.cpp  grade_school.h  grains.cpp  grains.h  hexadecimal.cpp  (+37 more)
